Skills section fix on Firefox & Safari

--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -520,6 +520,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 0px 40px;
+                align-content: flex-end;
 
                 @media (max-width: 1024px) {
                     height: 145px;
